# Sentigrade

./: Readme.txt
SentimentSentinel/: app.py  pyproject.toml
SentimentSentinel/utils/: news_api.py  sentiment_analyzer.py
